--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
   },
   "scripts": {
     "start": "node server.js",
-    "start:dev":"nodemon server.js"
+    "start:dev": "nodemon server.js"
   },
   "author": "Bruno Zeppa, Julio Gayosso",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
